--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>This runs without javascript</noscript>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
